# technical-blog-monitor

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CACHE_BUG_FIX_SUMMARY.md  CLOUDSCRAPER_INTEGRATION.md  CONTAINERIZATION_SUMMARY.md  CONTAINER_GUIDE.md  CONTRIBUTING.md  Containerfile  DEMO.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.dev  E2E_RUN_SUMMARY.md  FEEDSPOT_ANALYSIS.md  FEEDSPOT_NEW_FEEDS.env  FEEDS_STATUS_WORKING.md  FEED_STATUS_REPORT.md  FINAL_E2E_REPORT.md  Makefile  NEXT_THREAD_TASKS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.ja.md  README.md  SECURITY_FIX.md  SESSION_FINAL_SUMMARY.md  SESSION_IMPROVEMENTS.md  SESSION_README.md  SESSION_SUMMARY.md  SESSION_UPDATE.md  TESTING.md  THREAD_T-019b2232_SUMMARY.md  TODO.md  WARP.md  check_disabled_feeds.py  check_feed_responses.py  (+30 more)
doc/: JUSTHTML_MIGRATION_STATE.md
doc/diagrams/: component_architecture.mmd  data_flow.mmd
docs/archive/: DEMO.md  SECURITY_FIX.md
docs/design/: knowledge_retention.md
docs/guides/: CONTAINER_QUICK_START.md
docs/reports/: E2E_PERFORMANCE_REPORT.md  E2E_TEST_SUMMARY.txt  FEEDBACK_SUMMARY.md  load_test_results.md
grafana/dashboards/: main_dashboard.json
monitor/: __init__.py  config.py  context.py  dashboard.py  i18n.py  main.py  scheduler.py  tasks.py
monitor/cache/: __init__.py  filesystem.py  memory.py  postgres.py  redis.py
monitor/db/: __init__.py  postgres_pool.py
monitor/embeddings/: __init__.py  ollama.py
monitor/extractor/: __init__.py  article_parser.py  image_extractor.py  metadata.py
monitor/feeds/: __init__.py  atom.py  base.py  browser_fallback.py  html_fallback.py  json.py  medium.py  rss.py  spotify.py  utils.py
monitor/fetcher/: __init__.py  browser.py  http_client.py
monitor/llm/: __init__.py  base.py  ollama.py  openai.py
monitor/models/: __init__.py  article.py  blog_post.py  cache_entry.py  content_type.py  embedding.py
monitor/parser/: __init__.py  html_parser.py
monitor/tests/: test_article_parser.py  test_browser_config.py  test_config_vectordb.py  test_embeddings_config.py  test_feed_processor.py  test_models_exports.py  test_render_mermaid_security.py  test_security.py
monitor/vectordb/: __init__.py  pgvector.py
monitor/web/: __init__.py  app.py
monitor/web/templates/: index.html
scripts/: check_vectordb.py  generate_web_view.py  reset_db.py  run_all_tests.sh  run_dashboard.sh  view_latest_entries.py
tests/e2e/: test_full_pipeline.py  test_postgres_pipeline.py
tests/integration/: test_basic.py  test_feed_processor.py  test_feeds.py  test_knowledge_retention.py
tools/: check_db_connection.py  check_metrics.py  configure_datasource.py  dashboard_manager.py  render_mermaid.py  test_error_logging.py  trace_feed.py
