[tool.poetry]
name = "technical-blog-monitor"
version = "0.1.0"
description = "A daemon that monitors technical blogs, renders pages, and generates embeddings for vector search"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "monitor"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
httpx = "^0.25.0"
playwright = "^1.39.0"
readability-lxml = "^0.8.1"
beautifulsoup4 = "^4.12.2"
redis = {extras = ["hiredis"], version = "^5.0.1"}
aioredis = "^2.0.1"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
apscheduler = "^3.10.4"
tenacity = "^8.2.3"
anyio = "^4.0.0"
structlog = "^23.2.0"
prometheus-client = "^0.17.1"
pillow = "^10.1.0"
numpy = "^1.26.0"
feedparser = "^6.0.10"
python-dateutil = "^2.8.2"
aiofiles = "^23.2.1"

# Vector database clients - choose based on preference
qdrant-client = "^1.6.0"
chromadb = "^0.4.18"
pinecone-client = "^2.2.4"

# Embedding models - choose based on preference
openai = "^1.3.0"
sentence-transformers = "^2.2.2"
transformers = "^4.34.1"
torch = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"
ruff = "^0.1.3"
pre-commit = "^3.5.0"
docker = "^6.1.3"
types-redis = "^4.6.0.7"
types-requests = "^2.31.0.10"
bandit = "^1.7.9"
pip-audit = "^2.7.3"
freezegun = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
monitor = "monitor.main:main"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["monitor/tests"]
asyncio_mode = "auto"
addopts = "-q --cov=monitor --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.coverage.run]
source = ["monitor"]
omit = ["monitor/tests/*"]
