[project]
name = "technical-blog-monitor"
version = "0.1.0"
description = "A daemon that monitors technical blogs, renders pages, and generates embeddings for vector search"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.48.0",
    "readability-lxml>=0.8.1",
    "justhtml>=0.10.0",
    "beautifulsoup4>=4.14.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.4",
    "tenacity>=9.0.0",
    "anyio>=4.6.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "pillow>=11.0.0",
    "numpy>=2.1.0",
    "feedparser>=6.0.11",
    "python-dateutil>=2.9.0",
    "aiofiles>=24.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "certifi>=2024.8.30",
    "bleach>=6.1.0",
    "openai>=1.54.0",
    "sentence-transformers>=3.2.0",
    "transformers>=4.48.0",
    "torch>=2.5.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.4.0",
    "brotli>=1.2.0",
    "cloudscraper>=1.2.71",
]

[project.scripts]
monitor = "monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.10.1",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.3",
    "pre-commit>=3.5.0",
    "docker>=6.1.3",
    "types-requests>=2.31.0.10",
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
    "freezegun>=1.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["monitor"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["monitor/tests"]
asyncio_mode = "auto"
addopts = "-q --cov=monitor --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "B"]
ignore = []

[tool.coverage.run]
source = ["monitor"]
omit = ["monitor/tests/*"]
